fix z-index error

--- a/site/src/style/sections/_header.scss
+++ b/site/src/style/sections/_header.scss
@@ -15,7 +15,7 @@ header.header {
   width: 100%;
   padding-block: 2.5rem;
   background: $blue;
-  z-index: 2
+  z-index: 2;
   
   .container {
     display: flex;
